--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@neodrag/svelte": "^2.0.6",
+    "@reown/appkit": "^1.6.5",
+    "@reown/appkit-adapter-solana": "^1.6.5",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
@@ -27,6 +29,7 @@
     "@solana/web3.js": "^1.98.0",
     "@svelte-on-solana/wallet-adapter-core": "^1.0.11-alpha.0",
     "@svelte-on-solana/wallet-adapter-ui": "^1.0.21-alpha.0",
+    "@sveltejs/adapter-vercel": "^5.6.1",
     "bits-ui": "^0.22.0",
     "chart.js": "^4.4.2",
     "matter-js": "^0.19.0",
@@ -40,7 +43,6 @@
     "@rollup/plugin-inject": "^5.0.5",
     "@rollup/plugin-json": "^6.1.0",
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/adapter-vercel": "^5.6.1",
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/eslint": "^8.56.0",
