--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@neodrag/svelte": "^2.0.6",
     "@reown/appkit": "^1.6.5",
     "@reown/appkit-adapter-solana": "^1.6.5",
+    "@reown/appkit-adapter-wagmi": "^1.6.5",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
@@ -35,7 +36,9 @@
     "matter-js": "^0.19.0",
     "svelte-persisted-store": "^0.12.0",
     "tailwind-merge": "^2.3.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "viem": "^2.22.21",
+    "wagmi": "^2.14.9"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
